--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+.footer{
+  bottom: 0;
+  position: fixed;
+  background: #e9dede ;
+  width: 100%;
+  margin: 0px auto;
+  padding: 0px;
+}
+
+
