--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
   text-align: center;
 }
 
-.footer{
-  bottom: 0;
-  position: fixed;
-  background: #e9dede ;
-  width: 100%;
+.footer {
+  background-color: #D1C4E9;
   margin: 0px auto;
-  padding: 0px;
+  padding-top: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
-
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px 50px 0px;
+  min-height: 400px;
+}
